[metadata]
name = make_ssh_config
version = 0.0.1
license = MIT License
classifiers =
    Development Status :: 3 - Alpha
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.7

[options]
packages = make_ssh_config
install_requires =
    Jinja2 == 3.1.3
    PyYAML == 5.4.1

[options.entry_points]
console_scripts =
    make_ssh_config = make_ssh_config.__main__:main
